Screen step, form fix

--- a/client/src/assets/styles/main.scss
+++ b/client/src/assets/styles/main.scss
@@ -1,1 +1,17 @@
 @import "bootstrap";
+
+.title {
+    line-height: 1;
+}
+
+.section {
+    margin-bottom: 20px;
+}
+
+.row {
+    margin-bottom: 10px;
+}
+
+.checkbox {
+    margin-left: 5px;
+}
