Added advanced settings option

--- a/client/src/assets/styles/main.scss
+++ b/client/src/assets/styles/main.scss
@@ -19,3 +19,20 @@
 .submit-button {
     margin-top: 10px;
 }
+
+.danger-light,
+.required {
+    color: #F08080;
+}
+
+.warning {
+    color: #ffcc00;
+}
+
+.danger {
+    color: #DC143C;
+}
+
+.switch {
+    margin-top: 3px !important;
+}
