--- a/client/src/assets/styles/main.scss
+++ b/client/src/assets/styles/main.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "base/fonts";
 
 .title {
     line-height: 1;
@@ -6,10 +7,6 @@
 
 .section {
     margin-bottom: 20px;
-}
-
-.row {
-    margin-bottom: 10px;
 }
 
 .checkbox {
@@ -31,8 +28,4 @@
 
 .danger {
     color: #DC143C;
-}
-
-.switch {
-    margin-top: 3px !important;
 }
