Added profile & subscriptions count

--- a/client/src/assets/styles/main.scss
+++ b/client/src/assets/styles/main.scss
@@ -29,3 +29,15 @@
 .danger {
     color: #DC143C;
 }
+
+// TODO: Light theme
+.ant-btn.ant-btn-danger {
+    &,
+    &:hover {
+        color: #DC143C;
+    }
+
+    &:hover {
+        background: lighten(#DC143C, 51%);
+    }
+}
