--- a/client/src/assets/styles/base/_fonts.scss
+++ b/client/src/assets/styles/base/_fonts.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Sofia+Sans+Semi+Condensed:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sofia+Sans+Semi+Condensed:wght@300;400;500;600;700&display=swap');
 
 body {
     font-family: 'Sofia Sans Semi Condensed', sans-serif;
@@ -8,6 +8,15 @@ body {
 :root {
     font-family: 'Sofia Sans Semi Condensed', sans-serif;
     font-size: 15px;
+}
+
+ul,
+li,
+h1,
+h2,
+h3 {
+    margin: 0;
+    padding: 0;
 }
 
 .link {
