--- a/client/src/assets/styles/main.scss
+++ b/client/src/assets/styles/main.scss
@@ -30,14 +30,35 @@
     color: #DC143C;
 }
 
-// TODO: Light theme
-.ant-btn.ant-btn-danger {
-    &,
-    &:hover {
-        color: #DC143C;
+.default {
+    .ant-btn {
+        &,
+        &:hover {
+            color: #000;
+        }
+
+        &:hover {
+            background: lighten(#DC143C, 51%);
+        }
     }
 
-    &:hover {
-        background: lighten(#DC143C, 51%);
+    .ant-btn.ant-btn-danger {
+        &,
+        &:hover {
+            color: #fff;
+        }
+    }
+}
+
+.dark {
+    .ant-btn.ant-btn-danger {
+        &,
+        &:hover {
+            color: #fff;
+        }
+
+        &:hover {
+            background: lighten(#DC143C, 51%);
+        }
     }
 }
