--- a/client/src/assets/styles/base/_fonts.scss
+++ b/client/src/assets/styles/base/_fonts.scss
@@ -1,13 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Sofia+Sans+Semi+Condensed:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap');
 
 body {
-    font-family: 'Sofia Sans Semi Condensed', sans-serif;
+    font-family: 'Jura', sans-serif;
     font-size: 15px;
 }
 
 :root {
-    font-family: 'Sofia Sans Semi Condensed', sans-serif;
+    font-family: 'Jura', sans-serif;
     font-size: 15px;
+}
+
+.Vue-Toastification__toast-body {
+    font-family: 'Jura', sans-serif;
 }
 
 ul,
